--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <body>
 
     <div class="header">
+
+  <div class="logo">
+  </div>
         <div class="NavBar">
 
       <ul>
@@ -66,3 +69,4 @@
     <script src="C:\Users\Christopher\Desktop\project1\alert.js"></script>
   </body>
 </html>
+
